# gann_fan

./: .gitignore  CHANGELOG.md  GANN_THEORY.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  START_HERE.md  demo_live.py  example.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_coinbase.py  test_timeframes.py  verify_install.py
gann_fan/: __init__.py  cli.py  core.py  core_legacy.py  data.py  plot.py
tests/: __init__.py  test_core.py  test_core_crypto.py
